# quilkin

./: CHANGELOG.md  Cargo.toml  about.toml  deny.toml  justfile  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.ci/: install-virtme-ng.sh
.ci/xdp/: integ-test-multi-kernel.sh
.github/workflows/: ci.yml  docs.yml  xdp-integration-test.yml
benches/: cluster_map.rs  shared.rs  token_router.rs
crates/corrosion/: Cargo.toml
crates/corrosion-tests/src/: lib.rs
crates/corrosion-tests/tests/: db.rs  disk_full.rs  handshake.rs  quic.rs  subscription.rs
crates/corrosion/src/: codec.rs  db.rs  gossip.rs  lib.rs  persistent.rs  pubsub.rs  schema.rs  server.rs
crates/corrosion/src/client/: write.rs
crates/corrosion/src/db/: write.rs
crates/corrosion/src/gossip/: changes.rs  handler.rs  metrics.rs  swim.rs  sync.rs  transport.rs
crates/corrosion/src/gossip/changes/: throttle.rs
crates/corrosion/src/persistent/: client.rs  error.rs  executor.rs  mutator.rs  proto.rs  server.rs
crates/corrosion/tests/: db.rs
crates/ebpf/: .clang-format  .clangd  Cargo.toml  build.sh
crates/ebpf/src/: ebpf-main-l2.rs  ebpf-main.rs  l2-router.c  layer2.c  main.c  shared.h
crates/macros/: Cargo.toml
crates/proto-gen/: gen.rs
crates/quilkin-proto/: Cargo.toml
crates/quilkin-proto/src/: generated.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs  lifecycle.rs  net.rs
crates/system/src/net/http/: metrics.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs
crates/test/tests/: mesh.rs  proxy.rs  uring.rs
crates/types/src/: endpoint.rs  icao.rs  lib.rs
crates/xdp/: Cargo.toml
crates/xdp/src/: linux.rs
crates/xds/: Cargo.toml
crates/xds/src/: client.rs  config.rs  net.rs  server.rs
image/: Dockerfile  Dockerfile.ghaction
main/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
main/api/agones/: all.html  constant.GAMESERVER_IMAGE.html  constant.IMAGE_TAG.html  constant.PREV_IMAGE_TAG.html  constant.TOKEN_KEY.html  fn.create_agones_rbac_read_account.html  fn.create_token_router_config.html  fn.create_tokenised_gameserver.html  fn.debug_pods.html  fn.fleet.html  fn.game_server.html  fn.gameserver_address.html  fn.is_deployment_ready.html  fn.is_fleet_ready.html  fn.is_gameserver_ready.html  fn.is_pod_ready.html  fn.quilkin_config_map.html  fn.quilkin_container.html  fn.quilkin_proxy_deployment.html  index.html  static.CLIENT.html  struct.Client.html
main/api/corrosion/: all.html  fn.ip_to_peer.html  index.html  struct.SmallVec.html  type.Peer.html
main/api/corrosion_tests/: all.html  fn.assert_sub_event_eq.html  fn.exec.html  fn.exec_interr.html  fn.new_split_pool.html  fn.query_to_string.html  fn.setup.html  index.html  sidebar-items.js  struct.Cell.html  (+1 more)
main/book/: 404.html  faq.html  filters.html  index.html  installation.html  introduction.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-029dd2dd.js  searchindex-1df98441.js  searchindex-68bbd6e1.js  searchindex-7cb82db8.js  searchindex-b87a947a.js  searchindex-c89b6730.js  searchindex-cae655cc.js  searchindex-d5ea81d0.js  searchindex-db7a114a.js  searchindex-e61b2ab8.js  searchindex-f20afe1b.js  searchindex.js  toc-270f104f.js  toc.html
proto/quilkin/: pprof.proto
sdks/ue5/: Quilkin.uplugin  README.md
src/: cli.rs  config.rs  filters.rs  metrics.rs  net.rs  providers.rs  service.rs  signal.rs  test.rs
src/alloc/: metrics.rs
src/codec/: qcmp.rs
src/components/: admin.rs  proxy.rs
src/config/: corro.rs  datacenter.rs  watch.rs
src/filters/: decryptor.rs  game_protocol.rs
src/metrics/: http.rs
src/net/: cluster.rs  http.rs  io.rs  packet.rs  phoenix.rs  servers.rs  sessions.rs
src/providers/: corrosion.rs  k8s.rs
tests/: provider_k8s.rs  qcmp.rs
(+11756 files in other folders)
