[package]
name = "corrosion"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
camino = "1.1"
compact_str = "0.7"
data-encoding = "2.9"
eyre.workspace = true
quilkin-types.workspace = true
rusqlite = "0.33"
serde.workspace = true
smallvec = "1.15"
tempfile.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uhlc = "0.7"
uuid = "1.18"

[dependencies.corro-agent]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"

[dependencies.corro-api-types]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"

[dependencies.corro-client]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"

[dependencies.corro-types]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"

[dependencies.spawn]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"

[dependencies.tripwire]
git = "https://github.com/EmbarkStudios/corrosion"
branch = "misc"
