[package]
name = "quilkin-ebpf"
version = "0.1.0"
description = "quilkin's eBPF module"
license = "Apache-2.0"
edition = "2024"

[dependencies]
aya-ebpf = "0.1.1"
#aya-log-ebpf = "0.1"
network-types = "0.2.0"

[[bin]]
name = "packet-router"
path = "src/ebpf-main.rs"

[[bin]]
name = "packet-router-l2"
path = "src/ebpf-main-l2.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
