[package]
name = "quilkin-xdp"
version = "0.1.0"
description = "quilkin's XDP library"
license.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
xdp.workspace = true
# Used to load and attach eBPF programs
aya = "0.13.1"
libc.workspace = true
tracing.workspace = true

[lints]
workspace = true
